[package]
name = "rust_neotools"
version = "0.0.2"
edition = "2021"

[lib]
name = "rust_neotools"
crate_type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
itertools = "0.12.0"
chrono = "0.4.38"
rayon = "1.8.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
