[package]
name = "rust_neotools"
version = "0.0.6"
edition = "2021"

[lib]
name = "rust_neotools"
crate_type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pyo3 = { version = "0.28.0", features = ["extension-module"] }
itertools = "0.14.0"
chrono = "0.4.38"
rayon = "1.10.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
