[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust_neotools_py"
dynamic = ["version"]
description = "A Rust implementation of PHP 5's RNG to run some Neopets math, with python bindings."
authors = [{ name = "diceroll123" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []
classifiers=[
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/diceroll123/rust_neotools"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pyright]
include = [
    "rust_neotools",
]
exclude = [
    "**/__pycache__",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.11"
typeCheckingMode = "basic"
